--- a/main_app/templates/finches/index.html
+++ b/main_app/templates/finches/index.html
@@ -5,12 +5,14 @@
 
 {% for finch in finches %}
   <div class="card">
+    <a href="{% url 'detail' finch.id %}">
     <div class="card-content">
       <span class="card-title">{{ finch.name }}</span>
       <p>Age: {{ finch.age }}</p>
       <p>Favorite Food: {{ finch.fav_food }}</p>
       <p>Location: {{ finch.location }}</p>
     </div>
+    </a>
   </div>
 {% endfor %}
 
