--- a/main_app/templates/finches/detail.html
+++ b/main_app/templates/finches/detail.html
@@ -2,14 +2,60 @@
 {% block content %}
 
 <h1>Finch Details</h1>
-
-<div class="card">
-    <div class="card-content">
-        <span class="card-title">{{ finch.name }}</span>
-        <p>Color: {{ finch.color }}</p>
-        <p>Location: {{ finch.location }}</p>
-        <p>Age: {{ finch.age }}</p>
+<div class="row">
+    <div class="col s6">
+        <div class="card">
+            <div class="card-content">
+                <span class="card-title">{{ finch.name }}</span>
+                <p>Color: {{ finch.color }}</p>
+                <p>Location: {{ finch.location }}</p>
+                <p>Age: {{ finch.age }}</p>
+            </div>
+            <div class="card-action">
+                <a href="{% url 'finches_update' finch.id %}">Edit</a>
+                <a href="{% url 'finches_delete' finch.id %}">Delete</a>
+            </div>
+        </div>
+    </div>
+    <div class="col s6">
+        <form action="{% url 'add_feeding' finch.id %}" method="POST">
+            {% csrf_token %}
+            {{ feeding_form.as_p }}
+            <input type="submit" class="btn" value="Add Feeding">
+        </form>
+        <br>
+        {% if finch.fed_for_today %}
+            <div class="card-panel blue-text cneter-align">{{finch.name}} has been fed all meals for today!</div>
+        {% else %}
+            <div class="card-panel red-text center-align">{{finch.name}} is starving!</div>
+        {% endif %}
+        <table class="striped">
+            <thead>
+                <tr><th>Date</th><th>Meal</th></tr>
+            </thead>
+            <tbody>
+                {% for feeding in finch.feeding_set.all %}
+                <tr>
+                    <td>{{ feeding.date }}</td>
+                    <td>{{ feeding.get_meal_display }}</td>
+                </tr>
+                {% endfor %}
+            </tbody>
+        </table>
     </div>
 </div>
+
+<script>
+    const dateEL = document.getElementById('id_date');
+    M.Datepicker.init(dateEl, {
+        format: 'yyyy-mm-dd',
+        defaultDate: new Date(),
+        setDefaultDate: true,
+        autoClose: true
+    });
+
+    const selectEl = document.getElementById('id_meal');
+    M.FormSelect.init(selectEl);
+</script>
 
 {% endblock %}
