toys button added

--- a/main_app/templates/finches/detail.html
+++ b/main_app/templates/finches/detail.html
@@ -46,7 +46,7 @@
 </div>
 
 <script>
-    const dateEL = document.getElementById('id_date');
+    const dateEl = document.getElementById('id_date');
     M.Datepicker.init(dateEl, {
         format: 'yyyy-mm-dd',
         defaultDate: new Date(),
