--- a/main_app/templates/base.html
+++ b/main_app/templates/base.html
@@ -21,6 +21,8 @@
         </ul>
         <ul class="right">
           <li><a href="{% url 'about' %}">About</a></li>
+          <li><a href="{% url 'toys_create' %}">Add a Toy</a></li>
+          <li><a href="{% url 'toys_index' %}">View Toys</a></li>
           <li><a href="{% url 'finches_create' %}">Add a Finch</a></li>
           <li><a href="{% url 'index' %}">View All Finches</a></li>
         </ul>
