--- a/main_app/templates/base.html
+++ b/main_app/templates/base.html
@@ -21,10 +21,16 @@
         </ul>
         <ul class="right">
           <li><a href="{% url 'about' %}">About</a></li>
-          <li><a href="{% url 'toys_create' %}">Add a Toy</a></li>
-          <li><a href="{% url 'toys_index' %}">View Toys</a></li>
-          <li><a href="{% url 'finches_create' %}">Add a Finch</a></li>
-          <li><a href="{% url 'index' %}">View All Finches</a></li>
+          {% if user.is_authenticated %}
+            <li><a href="{% url 'toys_create' %}">Add a Toy</a></li>
+            <li><a href="{% url 'toys_index' %}">View Toys</a></li>
+            <li><a href="{% url 'finches_create' %}">Add a Finch</a></li>
+            <li><a href="{% url 'index' %}">View All Finches</a></li>
+            <li><a href="{% url 'logout' %}">Log Out</a></li>
+          {% else %}
+            <li><a href="{% url 'signup' %}">Sign Up</a></li>
+            <li><a href="{% url 'login' %}">Log In</a></li>
+         {% endif %}
         </ul>
       </div>
     </nav>
